// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


model User {
  id             String   @id @default(cuid())
  clerkId        String   @unique
  email          String   @unique
  name           String?
  avatar         String?
  isVerified     Boolean  @default(false)
  role           Role     @default(STUDENT)
  points         Int      @default(0)
  createdAt      DateTime @default(now())

  // Relations
  questions      Question[]
  answers        Answer[]
  posts          Post[]
  campaigns      Campaign[]
  communities    CommunityUser[]
  comments       Comment[]

  LeaderboardEntry LeaderboardEntry[]
}

enum Role {
  STUDENT
  ADMIN
  MODERATOR
  UNIVERSITY
  COMPANY
}

model Question {
  id            String     @id @default(cuid())
  title         String
  content       String
  tags          String[]
  user          User       @relation(fields: [userId], references: [id])
  userId        String
  community     Community? @relation(fields: [communityId], references: [id])
  communityId   String?
  createdAt     DateTime   @default(now())
  resolved      Boolean    @default(false)
  reward        Int        @default(0)

  answers       Answer[]
}

model Answer {
  id           String   @id @default(cuid())
  content      String
  question     Question @relation(fields: [questionId], references: [id])
  questionId   String
  user         User     @relation(fields: [userId], references: [id])
  userId       String
  createdAt    DateTime @default(now())
  isAccepted   Boolean  @default(false)
  pointsGiven  Int      @default(0)
}

model Post {
  id            String     @id @default(cuid())
  title         String
  content       String
  user          User       @relation(fields: [userId], references: [id])
  userId        String
  community     Community  @relation(fields: [communityId], references: [id])
  communityId   String
  createdAt     DateTime   @default(now())

  comments      Comment[]
}

model Comment {
  id        String   @id @default(cuid())
  content   String
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  post      Post     @relation(fields: [postId], references: [id])
  postId    String
  createdAt DateTime @default(now())
}

model Campaign {
  id          String   @id @default(cuid())
  title       String
  description String
  company     User     @relation(fields: [companyId], references: [id])
  companyId   String
  type        CampaignType
  image       String?
  link        String?
  createdAt   DateTime @default(now())
  active      Boolean  @default(true)
}

enum CampaignType {
  INTERNSHIP
  EVENT
  HACKATHON
  OFFER
}

model Course {
  id          String   @id @default(cuid())
  title       String
  provider    String
  link        String
  price       Float
  affiliate   Boolean  @default(false)
  image       String?
  tags        String[]
  createdAt   DateTime @default(now())
}

model Community {
  id           String           @id @default(cuid())
  name         String
  description  String?
  slug         String           @unique
  createdAt    DateTime         @default(now())

  users        CommunityUser[]
  posts        Post[]
  questions    Question[]
  rooms        CommunityRoom[]
}

model CommunityUser {
  id           String         @id @default(cuid())
  user         User           @relation(fields: [userId], references: [id])
  userId       String
  community    Community      @relation(fields: [communityId], references: [id])
  communityId  String
  role         CommunityRole  @default(MEMBER)
  joinedAt     DateTime       @default(now())
}

enum CommunityRole {
  MEMBER
  MODERATOR
  CREATOR
}

model CommunityRoom {
  id           String      @id @default(cuid())
  title        String
  community    Community   @relation(fields: [communityId], references: [id])
  communityId  String
  createdAt    DateTime    @default(now())
}

model News {
  id         String   @id @default(cuid())
  title      String
  content    String
  source     String?
  image      String?
  createdAt  DateTime @default(now())
  authorId   String?
}

model LeaderboardEntry {
  id        String   @id @default(cuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  score     Int
  period    String   // monthly, weekly, all-time
  createdAt DateTime @default(now())
}

model SystemStats {
  id                String   @id @default(cuid())
  totalUsers        Int
  totalQuestions    Int
  totalAnswers      Int
  totalCommunities  Int
  totalPosts        Int
  totalComments     Int
  totalCourses      Int
  totalCampaigns    Int
  totalNews         Int
  lastUpdated       DateTime @updatedAt
}
